[package]
authors = ["Bhargav Annem <bhargav.annem@gmail.com>"]
description = "Rust implementation of KZG point evaluation"
edition = "2021"
license = "MIT"
name = "kzg-rs"
version = "0.2.0"
repository = "https://github.com/succinctlabs/kzg-rs"

[dependencies]
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
once_cell = { version = "1.19.0", default-features = false, features = [
    "race",
    "alloc",
] }
bls12_381 = { git = "https://github.com/sp1-patches/bls12_381/", default-features = false, branch = "patch-v0.8.0", features = [
    "groups",
    "pairings",
    "alloc",
] }
sha2 = { version = "0.10.8", default-features = false }
ff = { version = "0.13.0", default-features = false, features = ["derive"] }

[dev-dependencies]
hex = "0.4.3"
serde_yaml = "0.9"
serde_derive = "1.0"
serde = { version = "^1.0", features = ["derive"] }

[build-dependencies]
bls12_381 = { git = "https://github.com/sp1-patches/bls12_381/", default-features = false, branch = "patch-v0.8.0", features = [
    "groups",
    "pairings",
    "alloc",
] }
hex = "0.4.3"
