[package]
authors = ["Bhargav Annem <bhargav.annem@gmail.com>"]
description = "Rust implementation of KZG point evaluation"
edition = "2021"
license = "MIT"
name = "kzg-rs"
version = "0.2.7"
repository = "https://github.com/succinctlabs/kzg-rs"

[dependencies]
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }

bls12_381 = { version = "=0.8.0", package = "sp1_bls12_381", default-features = false, features = [
    "groups",
    "pairings",
    "alloc",
] }
sha2 = { version = "0.10.8", default-features = false }
ff = { version = "0.13.0", default-features = false, features = ["derive"] }
spin = { version = "0.9.8", default-features = false, features = ["once"] }
serde = { version = "^1.0", default-features = false, features = [
    "derive",
], optional = true }
serde_arrays = "0.2.0"
rkyv = { version = "0.8.10", optional = true }

[dev-dependencies]
hex = "0.4.3"
serde_yaml = "0.9"
serde_derive = "1.0"
serde = { version = "^1.0", features = ["derive"] }

[build-dependencies]
bls12_381 = { version = "=0.8.0", package = "sp1_bls12_381", default-features = false, features = [
    "groups",
    "pairings",
    "alloc",
] }
hex = "0.4.3"

[features]
rkyv = ["dep:rkyv"]
serde = ["dep:serde"]
